2002-03-29  Stefan Kain  <stefan.kain@freenet.de>

	* spvw_allocate.d, spvw_genera1.d, spvw_memfile.d, spvw_typealloc.d:
	translated all comments

2002-03-28  Sam Steingold  <sds@gnu.org>

	when COMPILE-FILE with :OUTPUT-FILE arg causes REQUIRE to compile
	a file, place the compiled file in the same directory
	* compiler.lisp (*compile-file-directory*): new variable
	(compile-file): bind it when given :OUTPUT-FILE
	(c-REQUIRE): when it is non-NIL, give COMPILE-FILE :OUTPUT-FILE

2002-03-27  Arseny Slobodjuck  <ampy@ich.dvo.ru>
	    Sam Steingold  <sds@gnu.org>

	* install.bat: search for install.lisp in the current directory
	if it is not found in src/; slashes changed to backslashes
	* install.lisp (*clisp-home*): forward slashes only for -B parameter
	(*lisp-type-map*): new variables
	(top-level): registers all file extensions
	HKEY_LOCAL_MACHINE\\SOFTWARE\\Classes is a synonym for
	HKEY_CLASSES_ROOT, do not set it
	Use Y-OR-NO-P to let the user control the setup.

2002-03-24  Sam Steingold  <sds@gnu.org>

	* defs1.lisp (%time): avoid some possible consing by computing
	the hi/lo differences before merging

2002-03-24  Sam Steingold  <sds@gnu.org>

	* spvw.d (SUBR_SET_ARGTYPE): new macro
	(init_subr_tab_1, dynload_modules): use it

2002-03-24  Stefan Kain  <stefan.kain@freenet.de>

	* spvw.d, spvw_garcol.d, spvw_circ.d: translated all comments

2002-03-24   Gerhard Tonn  <GerhardTonn@swol.de>

	FFCALL ported to IBM s/390
	* lispbibl.d (STACK_register) [S390]: do not define -
	broken due to a compiler bug
	* ffcall/avcall/Makefile.in (avcall-s390.lo): new target
	* ffcall/avcall/avcall-s390.c, ffcall/avcall/avcall-s390.s: added
	* ffcall/avcall/avcall.h.in (__s390__): handle it
	* ffcall/callback/trampoline_r/Makefile.in (tramp-s390.lo): new target
	* ffcall/callback/trampoline_r/proto-s390.s: added
	* ffcall/callback/trampoline_r/tramp-s390.s: added
	* ffcall/callback/trampoline_r/proto.c (__s390__): handle it