@@ -1,3 +1,10 @@
+2002-03-30  Sam Steingold  <sds@gnu.org>
+
+	* trace.lisp (*trace-indent*): new user option
+	(trace-pre-output, trace-post-output): use it
+	(subclosure-pos): find traced definitions too
+	(%local-set): fixed error reporting
+
 2002-03-29  Stefan Kain  <stefan.kain@freenet.de>
 
 	* spvw_allocate.d, spvw_genera1.d, spvw_memfile.d, spvw_typealloc.d:
